--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.0",
     "react-firebase-hooks": "^2.2.0",
     "react-jitsi": "^1.0.4",
+    "react-mic": "^12.4.6",
     "react-scripts": "3.4.4"
   },
   "scripts": {
